# miniFS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: constants.h  file.c  file.h  file_descriptor.c  file_descriptor.h  i_node.c  i_node.h  i_node_data.c  i_node_data.h  init_file_system.c  init_file_system.h  main.c  parse_path.c  parse_path.h  superblock.c  superblock.h  util.c  util.h
test/: test_input.txt  test_output.txt
